# iNNOVEA

./: .gitignore  README.MD  pyproject.toml  requirements.txt
app_api/: manage.py
app_api/app_api/: urls.py
app_api/app_api/settings/: auth_settings.py  base.py  database_settings.py  installed_apps_settings.py  media_settings.py  new_api_settings.py  rest_settings.py
app_api/apps/core/: urls.py
app_api/apps/core/api/: views.py  viewsets.py
app_api/apps/core/utils/: context_articles.py
app_api/apps/core/utils/endpoints/: new_api_urls.py
